fix spinner out of box

--- a/src/components/UI/Spinner/Spinner.module.css
+++ b/src/components/UI/Spinner/Spinner.module.css
@@ -3,6 +3,7 @@
    position: relative;
    width: 64px;
    height: 64px;
+   margin-top: -22px;
 }
 
 .LdsRoller div {
